--- a/build.gradle
+++ b/build.gradle
@@ -1,29 +1,3 @@
-group 'org.lm.searchengine'
-version '1.0-SNAPSHOT'
-
-buildscript {
-    ext.kotlin_version = '1.0.6'
-
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.google.gms:google-services:3.0.0'
-    }
-}
-
-apply plugin: 'kotlin'
-
-repositories {
-    jcenter()
-    mavenCentral()
-}
-
-dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    compile 'com.google.firebase:firebase-plugins:1.0.5'
-}
 group 'com.computas.internal'
 version '1.0-SNAPSHOT'
 
@@ -39,11 +13,30 @@ buildscript {
 }
 
 apply plugin: 'kotlin'
+apply plugin: 'application'
+
 
 repositories {
+    jcenter()
     mavenCentral()
+    maven { url 'https://jitpack.io' }
 }
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    compile 'org.jsoup:jsoup:1.10.2'
+    compile 'log4j:log4j:1.2.17'
+    compile 'com.beust:klaxon:0.31'
+    compile 'com.github.jkcclemens:khttp:-SNAPSHOT'
+    testCompile 'junit:junit:4.12'
+}
+
+mainClassName = 'com.computas.internal.searchengine.MainKt'
+jar {
+    manifest {
+        attributes(
+                'Main-Class': 'com.computas.internal.searchengine.MainKt'
+        )
+
+    }
 }
