--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ group 'com.computas.internal'
 version '1.0-SNAPSHOT'
 
 buildscript {
-    ext.kotlin_version = '1.0.6'
+    ext.kotlin_version = '1.1.3'
 
     repositories {
         mavenCentral()
@@ -19,7 +19,6 @@ apply plugin: 'application'
 repositories {
     jcenter()
     mavenCentral()
-    maven { url 'https://jitpack.io' }
 }
 
 dependencies {
@@ -27,7 +26,7 @@ dependencies {
     compile 'org.jsoup:jsoup:1.10.2'
     compile 'log4j:log4j:1.2.17'
     compile 'com.beust:klaxon:0.31'
-    compile 'com.github.jkcclemens:khttp:-SNAPSHOT'
+    compile 'khttp:khttp:0.1.0'
     testCompile 'junit:junit:4.12'
 }
 
